--- a/src/app/util/util.component.html
+++ b/src/app/util/util.component.html
@@ -1,11 +1,13 @@
+<div id="util">
 <!--计算器组件-->
 <app-calculator></app-calculator>
 
-<div class="card" style="position: fixed">
+<div class="card">
   <div class="card-block">
     <button type="button" class="btn btn-info" (click)="chooseModel()">提交</button>
     <button class="btn btn-info-outline" (click)="downloadItem()">下载试题</button>
   </div>
+</div>
 </div>
 
 <!-- model -->
