--- a/src/app/unitexam/unitexam.component.html
+++ b/src/app/unitexam/unitexam.component.html
@@ -24,10 +24,10 @@
 <!-- 此变量须与组件内@ViewChild的值相同 -->
 <app-loginmodal #loginModal></app-loginmodal>
 
-<!-- 进度条组件 -->
-<!--<div [el-loading]="true">-->
-  <!--<el-tag>加载中..</el-tag>-->
-<!--</div>-->
+<!-- Loading 加载组件 -->
+<!-- <div class="demo" [el-loading]="true" [text]="'拼命加载中'">
+  <el-tag>加载中..</el-tag>
+</div> -->
 
 <!--试题列表-->
 <div class="row" [@flyIn]="'active'">
