--- a/src/app/manager/manager.component.css
+++ b/src/app/manager/manager.component.css
@@ -1,117 +1,223 @@
-/*
- *-----------------------------------------------------------------------------------
- * === CSS DESIGN ===
- *-----------------------------------------------------------------------------------
- * author SOLUTII SOFT
- */
+@import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
 
-/* === HTML ELEMENTS === */
+@import url(http://fonts.googleapis.com/css?family=Titillium+Web:300);
 
-/* === SIDEBAR === */
-a:link,
-a:focus,
-a:visited ,
-a:active,
-a:hover {
-  text-decoration: none;
+.logo{
+
 }
 
-/*.body {*/
-  /*position: relative;*/
-  /*margin: 0;*/
-  /*padding: 0;*/
-  /*transition: margin-left 0.5s;*/
-  /*-o-transition: margin-left 0.5s;*/
-  /*-moz-transition: margin-left 0.5s;*/
-  /*-webkit-transition: margin-left 0.5s;*/
-/*}*/
-
-/*.body.slide {*/
-  /*margin-left: 300px;*/
-/*}*/
-.sidebar {
-  background-color:#f8f8f8;
-  width: 13em;
-  height: 100%;
-  padding: 0px;
-  position: fixed;
-  right: auto;
-  top: 3.6em;
-  z-index: 1;
-  border: 1px solid #e7e7e7;
-  transition: left 0.5s;
-  -o-transition: left 0.5s;
-  -moz-transition: left 0.5s;
-  -webkit-transition: left 0.5s;
-  overflow-y: hidden;
-}
-.sidebar.show {
-  left: 0;
-  display: block;
-}
-.ps-scrollbar-y-rail {
-  margin: 5px 0;
-}
-/* === END SIDEBAR === */
-
-
-/* === SIDEBAR MENU === */
-.panel {
-  border: 0;
-  box-shadow: none;
+.manager{
+  display: -webkit-flex;
+  display: flex;
+  flex-flow: row  nowrap;
+  justify-content: space-between;
+  align-items: baseline;
+  -webkit-align-items: baseline;
 }
 
-.panel-default {
-  border-bottom: 1px solid #e7e7e7;
-  border-color:#e7e7e7;
-}
+.settings {
+  height:73px;
+  float:left;
+  background-image:url(http://s3.postimg.org/bqfooag4z/startific.jpg);
+  background-repeat:no-repeat;
+  width:250px;
+  margin:0px;
+ text-align: center;
+font-size:20px;
+font-family: 'Strait', sans-serif;
 
-/*.panel-default > .panel-heading {*/
-  /*background-color:#e7e7e7;*/
-
-/*}*/
-.panel-default > .panel-heading:hover {
-  background-color: #eeeeee;
 }
-.panel-default > .panel-heading  a {
-  color: #777;
-  display: block;
-  padding: 8px 0px;
-}
-
-.list-group-item {
-  padding-left: 25px;
-  border: 0;
-  background: #f8f8f8;
-}
-.list-group-item:hover {
-  background: #365167;
-  padding-left: 15px;
-  transition-delay: 0s;
-  transition-duration: 0.3s;
-  transition-property: all;
-  transition-timing-function: linear;
-}
-a.list-group-item {
-  color: #777;
-}
-a.list-group-item:hover {
-  background: #e7e7e7;
-  color: #555;
-}
-
-.solso-active {
-  background: #385269 !important;
-}
-
-.list-group-item.no-border {
-  border: 0;
-}
-
-.panel-group .panel + .panel {
-  margin-top: 0px;
-}
-/* === END SIDEBAR MENU === */
 
 
 
+.hover {
+  height:73px;
+  float:left;
+  background-image:url(http://s27.postimg.org/4hhl2szcf/startific_small.jpg);
+  background-repeat:no-repeat;
+  width:10em;
+  margin:0px;
+}
+
+
+
+
+
+.fa-lg {
+font-size: 1em;
+  
+}
+.fa {
+position: relative;
+display: table-cell;
+width: 55px;
+height: 36px;
+text-align: center;
+top:12px; 
+
+font-size:20px;
+
+
+
+}
+
+
+
+.main-menu:hover, nav.main-menu.expanded {
+width:250px;
+overflow:hidden;
+opacity:1;
+
+}
+
+.main-menu {
+background:#F7F7F7;
+border-right:1px solid #e5e5e5;
+position:absolute;
+top:0;
+bottom:0;
+height:100%;
+left:0;
+width:55px;
+overflow:hidden;
+-webkit-transition:width .2s linear;
+transition:width .2s linear;
+-webkit-transform:translateZ(0) scale(1,1);
+box-shadow: 1px 0 15px rgba(0, 0, 0, 0.07);
+  opacity:1;
+}
+
+.main-menu>ul {
+margin:7px 0;
+
+}
+
+.main-menu li {
+position:relative;
+display:block;
+width:250px;
+  
+
+
+}
+
+.main-menu li>a {
+position:relative;
+width:255px;
+display:table;
+border-collapse:collapse;
+border-spacing:0;
+color:#959595;
+font-size: 14px;
+text-decoration:none;
+-webkit-transform:translateZ(0) scale(1,1);
+-webkit-transition:all .14s linear;
+transition:all .14s linear;
+font-family: 'Strait', sans-serif;
+border-top:1px solid #F0F0F0;
+box-shadow:inset 0 1px 1px #FAFAFA;
+text-shadow: 1px 1px 1px  #fff;  
+}
+
+
+
+.main-menu .nav-icon {
+  
+position:relative;
+display:table-cell;
+width:55px;
+height:36px;
+text-align:center;
+vertical-align:middle;
+font-size:18px;
+
+}
+
+.main-menu .nav-text  {
+   
+position:relative;
+display:table-cell;
+vertical-align:middle;
+width:190px;
+font-family: 'Titillium Web', sans-serif;
+}
+
+.main-menu .share {
+}
+
+
+
+.main-menu .fb-like {
+
+left: 180px;
+position:absolute;
+top: 15px;
+}
+
+.main-menu>ul.logout {
+position:absolute;
+left:0;
+bottom:0;
+  
+}
+
+.no-touch .scrollable.hover {
+overflow-y:hidden;
+
+}
+
+.no-touch .scrollable.hover:hover {
+overflow-y:auto;
+overflow:visible;
+  
+}
+
+
+
+
+.settings:hover, settings:focus {   
+  background:url( http://s3.postimg.org/bqfooag4z/startific.jpg);
+}
+
+
+
+a:hover,a:focus {
+text-decoration:none;
+border-left:0px solid #F7F7F7;
+
+
+
+}
+
+nav {
+-webkit-user-select:none;
+-moz-user-select:none;
+-ms-user-select:none;
+-o-user-select:none;
+user-select:none;
+  
+}
+
+nav ul,nav li {
+outline:0;
+margin:0;
+padding:0;
+
+}
+.main-menu li:hover>a,nav.main-menu li.active>a,.dropdown-menu>li>a:hover,.dropdown-menu>li>a:focus,.dropdown-menu>.active>a,.dropdown-menu>.active>a:hover,.dropdown-menu>.active>a:focus,.no-touch .dashboard-page nav.dashboard-menu ul li:hover a,.dashboard-page nav.dashboard-menu ul li.active a {
+color:#fff;
+background-color:#00bbbb;
+text-shadow: 0px 0px 0px; 
+}
+.area {
+float: left;
+background: #e2e2e2;
+width: 100%;
+height: 100%;
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Titillium WebLight'), local('TitilliumWeb-Light'), url(http://themes.googleusercontent.com/static/fonts/titilliumweb/v2/anMUvcNT0H1YN4FII8wpr24bNCNEoFTpS2BTjF6FB5E.woff) format('woff');
+}
