--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,6 +3,8 @@
     ------------------------------------*/
 html {
   min-height: 100%;
+  padding: 0;
+  margin: 0;
 }
 body {
   margin-bottom: 200px;
