--- a/src/app/manager/manager.component.css
+++ b/src/app/manager/manager.component.css
@@ -1,220 +1,120 @@
-@import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
-
-@import url(http://fonts.googleapis.com/css?family=Titillium+Web:300);
-
-.logo{
-
-}
-
-.manager{
+/*flex布局*/
+.manager {
   display: -webkit-flex;
   display: flex;
-  flex-flow: row  nowrap;
-  justify-content: space-between;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
   align-items: baseline;
   -webkit-align-items: baseline;
 }
 
-.settings {
-  height:73px;
-  float:left;
-  background-image:url(http://s3.postimg.org/bqfooag4z/startific.jpg);
-  background-repeat:no-repeat;
-  width:250px;
-  margin:0px;
- text-align: center;
-font-size:20px;
-font-family: 'Strait', sans-serif;
-
+.sidebar {
+  /*flex: auto;*/
+  /*flex-basis:10em;*/
 }
 
-
-
-.hover {
-  height:73px;
-  float:left;
-  background-image:url(http://s27.postimg.org/4hhl2szcf/startific_small.jpg);
-  background-repeat:no-repeat;
-  width:10em;
-  margin:0px;
+.content {
+  margin: 0em 5em;
+  flex: auto;
 }
 
-
-
-
-
-.fa-lg {
-font-size: 1em;
-  
-}
-.fa {
-position: relative;
-display: table-cell;
-width: 55px;
-height: 36px;
-text-align: center;
-top:12px; 
-
-font-size:20px;
-
-
-
+/*左侧导航栏*/
+.main-menu {
+  background: #F7F7F7;
+  border-right: 1px solid #e5e5e5;
+  /*position: absolute;*/
+  top: 0;
+  bottom: 0;
+  height: 100%;
+  left: 0;
+  width: 55px;
+  overflow: hidden;
+  -webkit-transition: width .2s linear;
+  transition: width .2s linear;
+  -webkit-transform: translateZ(0) scale(1, 1);
+  box-shadow: 1px 0 15px rgba(0, 0, 0, 0.07);
+  opacity: 1;
 }
 
+/*所有父元素是a标签的i元素*/
+.main-menu a > i {
+  position: relative;
+  display: table-cell;
+  width: 2.8em;
+  height: 2em;
+  text-align: center;
+  top: 12px;
+  font-size: 20px;
 
+}
 
 .main-menu:hover, nav.main-menu.expanded {
-width:250px;
-overflow:hidden;
-opacity:1;
+  width: 15em;
+  overflow: hidden;
+  opacity: 1;
 
 }
 
-.main-menu {
-background:#F7F7F7;
-border-right:1px solid #e5e5e5;
-position:absolute;
-top:0;
-bottom:0;
-height:100%;
-left:0;
-width:55px;
-overflow:hidden;
--webkit-transition:width .2s linear;
-transition:width .2s linear;
--webkit-transform:translateZ(0) scale(1,1);
-box-shadow: 1px 0 15px rgba(0, 0, 0, 0.07);
-  opacity:1;
-}
-
-.main-menu>ul {
-margin:7px 0;
+.main-menu > ul {
+  margin: 7px 0;
 
 }
 
-.main-menu li {
-position:relative;
-display:block;
-width:250px;
-  
-
-
+.main-menu li > a {
+  position: relative;
+  width: 255px;
+  display: table;
+  border-collapse: collapse;
+  border-spacing: 0;
+  color: #959595;
+  font-size: 14px;
+  text-decoration: none;
+  -webkit-transform: translateZ(0) scale(1, 1);
+  -webkit-transition: all .14s linear;
+  transition: all .14s linear;
+  font-family: 'Strait', sans-serif;
+  border-top: 1px solid #F0F0F0;
+  box-shadow: inset 0 1px 1px #FAFAFA;
+  text-shadow: 1px 1px 1px #fff;
 }
 
-.main-menu li>a {
-position:relative;
-width:255px;
-display:table;
-border-collapse:collapse;
-border-spacing:0;
-color:#959595;
-font-size: 14px;
-text-decoration:none;
--webkit-transform:translateZ(0) scale(1,1);
--webkit-transition:all .14s linear;
-transition:all .14s linear;
-font-family: 'Strait', sans-serif;
-border-top:1px solid #F0F0F0;
-box-shadow:inset 0 1px 1px #FAFAFA;
-text-shadow: 1px 1px 1px  #fff;  
+.main-menu .nav-text {
+
+  position: relative;
+  display: table-cell;
+  vertical-align: middle;
+  width: 190px;
+  font-family: 'Titillium Web', sans-serif;
 }
 
-
-
-.main-menu .nav-icon {
-  
-position:relative;
-display:table-cell;
-width:55px;
-height:36px;
-text-align:center;
-vertical-align:middle;
-font-size:18px;
-
-}
-
-.main-menu .nav-text  {
-   
-position:relative;
-display:table-cell;
-vertical-align:middle;
-width:190px;
-font-family: 'Titillium Web', sans-serif;
-}
-
-.main-menu .share {
-}
-
-
-
-.main-menu .fb-like {
-
-left: 180px;
-position:absolute;
-top: 15px;
-}
-
-.main-menu>ul.logout {
-position:absolute;
-left:0;
-bottom:0;
-  
-}
-
-.no-touch .scrollable.hover {
-overflow-y:hidden;
-
-}
-
-.no-touch .scrollable.hover:hover {
-overflow-y:auto;
-overflow:visible;
-  
-}
-
-
-
-
-.settings:hover, settings:focus {   
-  background:url( http://s3.postimg.org/bqfooag4z/startific.jpg);
-}
-
-
-
-a:hover,a:focus {
-text-decoration:none;
-border-left:0px solid #F7F7F7;
-
-
+a:hover, a:focus {
+  text-decoration: none;
+  border-left: 0px solid #F7F7F7;
 
 }
 
 nav {
--webkit-user-select:none;
--moz-user-select:none;
--ms-user-select:none;
--o-user-select:none;
-user-select:none;
-  
-}
-
-nav ul,nav li {
-outline:0;
-margin:0;
-padding:0;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 
 }
-.main-menu li:hover>a,nav.main-menu li.active>a,.dropdown-menu>li>a:hover,.dropdown-menu>li>a:focus,.dropdown-menu>.active>a,.dropdown-menu>.active>a:hover,.dropdown-menu>.active>a:focus,.no-touch .dashboard-page nav.dashboard-menu ul li:hover a,.dashboard-page nav.dashboard-menu ul li.active a {
-color:#fff;
-background-color:#00bbbb;
-text-shadow: 0px 0px 0px; 
+
+nav ul, nav li {
+  outline: 0;
+  margin: 0;
+  padding: 0;
+
 }
-.area {
-float: left;
-background: #e2e2e2;
-width: 100%;
-height: 100%;
+
+.main-menu li:hover > a, nav.main-menu li.active > a, .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus, .dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus, .no-touch .dashboard-page nav.dashboard-menu ul li:hover a, .dashboard-page nav.dashboard-menu ul li.active a {
+  color: #fff;
+  background-color: #00bbbb;
+  text-shadow: 0px 0px 0px;
 }
+
 @font-face {
   font-family: 'Titillium Web';
   font-style: normal;
