--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -1,37 +1,35 @@
-<div class="container container-fluid manager">
-  <!-- 左侧边栏导航 -->
-  <div>
+<div class="manager">
+  <!-- 左侧边栏导航开始 -->
+  <div class="sidebar">
 
     <nav class="main-menu">
 
       <div class="logo"></div>
-      <div class="settings"></div>
+      <div class="search" style="display: none">
+        <input type="text" placeholder="请输入搜索内容">
+      </div>
 
       <ul>
 
         <li routerLinkActive="active">
-
           <a href="javascript:void(0)" [routerLink]="['/manager/dashboard']">
-            <i class="fa fa-home fa-lg"></i>
+            <i class="fa fa-dashboard"></i>
             <span class="nav-text">主面板</span>
-
           </a>
         </li>
 
-
         <li class="has-subnav">
           <a href="javascript:void(0)" [routerLink]="['/manager/addExam']">
-            <i class="fa fa-clock-o fa-lg"></i>
+            <i class="fa fa-clock-o"></i>
             <span class="nav-text">
               新增试题
             </span>
           </a>
-
         </li>
 
         <li>
           <a href="javascript:void(0)" [routerLink]="['/manager/updExam']">
-            <i class="fa fa-desktop fa-lg"></i>
+            <i class="fa fa-desktop"></i>
             <span class="nav-text">
               编辑试题
             </span>
@@ -40,35 +38,24 @@
 
         <li>
           <a href="javascript:void(0)" [routerLink]="['/manager/updUser']">
-            <i class="fa fa-desktop fa-lg"></i>
+            <i class="fa fa-desktop"></i>
             <span class="nav-text">
               用户管理
             </span>
           </a>
         </li>
 
-
       </ul>
 
-      <ul class="logout">
-        <li>
-          <a href="javascript:void(0)" [routerLink]="['/manager/updUser']">
-            <i class="fa fa-lightbulb-o fa-lg"></i>
-            <span class="nav-text">
-              BLOG
-            </span>
-
-          </a>
-        </li>
-      </ul>
     </nav>
 
 
   </div>
+  <!-- 左侧边栏导航结束 -->
 
 
   <!--后台管理右侧内容-->
-  <div class="container-fluid container">
+  <div class="content">
     <router-outlet></router-outlet>
   </div>
 </div>
