--- a/src/app/manager/manager.component.css
+++ b/src/app/manager/manager.component.css
@@ -87,6 +87,14 @@
   font-family: 'Titillium Web', sans-serif;
 }
 
+.checkbox_label{
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+
 a:hover, a:focus {
   text-decoration: none;
   border-left: 0px solid #F7F7F7;
@@ -120,4 +128,21 @@ nav ul, nav li {
   font-style: normal;
   font-weight: 300;
   src: local('Titillium WebLight'), local('TitilliumWeb-Light'), url(http://themes.googleusercontent.com/static/fonts/titilliumweb/v2/anMUvcNT0H1YN4FII8wpr24bNCNEoFTpS2BTjF6FB5E.woff) format('woff');
+}
+
+
+
+
+
+
+
+.toggle_accordion{
+  display: none;
+}
+.item_son{
+  display: none;
+}
+
+.item input:checked ~ .item_son{
+  display: block;
 }
