--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -18,24 +18,6 @@
           </a>
         </li>
 
-        <li class="has-subnav">
-          <a href="javascript:void(0)" [routerLink]="['/manager/addExam']">
-            <i class="fa fa-clock-o"></i>
-            <span class="nav-text">
-              新增试题
-            </span>
-          </a>
-        </li>
-
-        <li>
-          <a href="javascript:void(0)" [routerLink]="['/manager/updExam']">
-            <i class="fa fa-desktop"></i>
-            <span class="nav-text">
-              编辑试题
-            </span>
-          </a>
-        </li>
-
         <li>
           <a href="javascript:void(0)" [routerLink]="['/manager/updUser']">
             <i class="fa fa-desktop"></i>
@@ -45,6 +27,38 @@
           </a>
         </li>
 
+      </ul>
+
+      <ul class="item">
+        <input type="text" id="item_total" type="checkbox" class="toggle_accordion">
+        <li class="item_parent">
+
+          <a href="javascript:void(0)">
+            <i class="fa fa-clock-o"></i>
+            <span class="nav-text">
+              <label for="item_total" class="checkbox_label">试题管理</label>
+            </span>
+          </a>
+        </li>
+
+
+        <li class="item_son">
+          <a href="javascript:void(0)" [routerLink]="['/manager/addExam']">
+            <i class="fa fa-clock-o"></i>
+            <span class="nav-text">
+              新增试题
+            </span>
+          </a>
+        </li>
+
+        <li class="item_son">
+          <a href="javascript:void(0)" [routerLink]="['/manager/updExam']">
+            <i class="fa fa-desktop"></i>
+            <span class="nav-text">
+              编辑试题
+            </span>
+          </a>
+        </li>
       </ul>
 
     </nav>
